# glades2

./: CMakeLists.txt
cmake/: glades2Config.cmake.in
include/glad/: glad.h  glad_debug.h  glad_release.h
src/: glad.c  glad_debug_impl.h  glad_release_impl.h
